JPS for all claims now working. Expense ManyToOne fetch annotations changed to EAGER

--- a/src/main/webapp/logged_out.html
+++ b/src/main/webapp/logged_out.html
@@ -103,7 +103,7 @@
     </div>
 
     <!-- FOOTER -->
-    <div class="card text-center" style=" position: absolute; bottom: 0; width: 100%">
+    <div class="card text-center" style=" float: bottom; width: 100%">
         <div class="card-body" style="background-color: #ffd500; color: rgb(218, 17, 17); font-weight: bold;">
           <h5 class="card-title">Reactive Rubber Duckie Distributors Incorporated (R<sup>2</sup>D<sup>2</sup> Inc.) is a wholly owned subdivision of Migrating Mallards PLC</h5>
           <p class="card-text">R<sup>2</sup>D<sup>2</sup> Inc. 33 Waterside Drive, Duckworth MA 45678   Tel: (555) 123 4567   Email: ducksinarow@r2r2.com</p>
