--- a/src/main/webapp/logged_out.html
+++ b/src/main/webapp/logged_out.html
@@ -10,9 +10,18 @@
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Crafty+Girls&family=Dancing+Script&family=Lato:wght@100&family=Patrick+Hand&family=Quicksand:wght@300&family=Roboto:wght@100&display=swap');
+    html{
+        height: 100%;
+    }
     body{
         background-color: #ffea00;
         height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .row{
+        padding-top: 100px;
+        flex: 1 0 auto;
     }
     .form-group{
         width: 275px;
@@ -103,7 +112,7 @@
     </div>
 
     <!-- FOOTER -->
-    <div class="card text-center" style=" float: bottom; width: 100%">
+    <div class="card text-center" style="flex-shrink: 0; width: 100%">
         <div class="card-body" style="background-color: #ffd500; color: rgb(218, 17, 17); font-weight: bold;">
           <h5 class="card-title">Reactive Rubber Duckie Distributors Incorporated (R<sup>2</sup>D<sup>2</sup> Inc.) is a wholly owned subdivision of Migrating Mallards PLC</h5>
           <p class="card-text">R<sup>2</sup>D<sup>2</sup> Inc. 33 Waterside Drive, Duckworth MA 45678   Tel: (555) 123 4567   Email: ducksinarow@r2r2.com</p>
