--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,14 +73,14 @@
                     <a class="nav-link" href="submissions_pending.jsp">Pending Submissions <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="submissions_approval.jsp">Submissions for Approval <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="SubmissionsPendingAll">Submissions for Approval <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="submissions_all.jsp">All Past Submissions <span class="sr-only">(current)</span></a>
                 </li>-->
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-warning my-2 my-sm-0" style="color:rgb(218, 17, 17); border-color: rgb(218, 17, 17); font-size: 21pt; " type="submit">Logout</button>
+                <button class="btn btn-outline-warning my-2 my-sm-0" style="color:rgb(218, 17, 17); border-color: rgb(218, 17, 17); font-size: 21pt;" type="submit">Logout</button>
             </form>
             <img src="./images/duck-front.png" width="61px" style="margin-left:5px; margin-right: 30px"/>
         </div>
