--- a/src/main/webapp/logged_out.html
+++ b/src/main/webapp/logged_out.html
@@ -81,7 +81,7 @@
                 </li>-->
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-warning my-2 my-sm-0" style="color:rgb(218, 17, 17); border-color: rgb(218, 17, 17); font-size: 21pt; " type="submit">Logout</button>
+                <input class="btn btn-outline-warning my-2 my-sm-0" style="color:rgb(218, 17, 17); border-color: rgb(218, 17, 17); font-size: 21pt;" type="button" onclick="logOut()" value="Logout"/>
             </form>
             <img src="./images/duck-front.png" width="61px" style="margin-left:5px; margin-right: 30px"/>
         </div>
@@ -95,19 +95,19 @@
             <p class="intro">********************</p>
         </div>
         <div class="col-lg-4">
-            <form style="margin-top: 30px; margin-right: 30px; border-radius: 20px; padding: 20px; padding-bottom:30px; color:rgb(218, 17, 17); background-color: #ffd500;">
+            <form action="LoginServlet" method="post" id="login" style="margin-top: 30px; margin-right: 30px; border-radius: 20px; padding: 20px; padding-bottom:30px; color:rgb(218, 17, 17); background-color: #ffd500;">
                 <p style="font-size:21pt; text-align: center;">Login</p>
                 <div class="form-group">
-                  <label for="username">Username</label>
-                  <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp">
                 </div>
                 <div class="form-group">
-                  <label for="password">Password</label>
-                  <input type="password" class="form-control" id="password" name="password">
-                  <small id="passwordHelp" class="form-text text-muted" style="margin-bottom: 15px;">Never share your password</small>
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                    <small id="passwordHelp" class="form-text text-muted" style="margin-bottom: 15px;">Never share your password</small>
                 </div>
-                <button type="submit" class="btn btn-primary" style="width: 135px; background-color: rgb(218, 17, 17); font-weight: bold; display: block; margin: auto; border-width: 0px;">Submit</button>
-              </form>
+                <input type="button" class="btn btn-primary" value="Submit" onclick="submitForm()" style="width: 135px; background-color: rgb(218, 17, 17); font-weight: bold; display: block; margin: auto; border-width: 0px;" />
+            </form>
         </div>
     </div>
 
@@ -121,5 +121,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+<script>
+       function submitForm(){
+        document.getElementById("login").submit();
+       }
+       function logOut(){
+            document.location.href="LogoutServlet";
+       }
+</script>
+
 </body>
 </html>
